--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -14,9 +14,18 @@
     <div class="viewer" >
     <!-- Buttons for downloading the data as a CSV and the graph as an image -->
     <div style="margin-bottom: 1ch;">
+
         <script src="{% static 'js/utils/createCsv.js' %}"></script>
         <button class="btn btn-secondary submit-button" onclick="downloadData('temperature_profile')">Download data</button>
         <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temperature_profile')">Download graph</button>
+        {% comment %}
+        <button class="btn submit-button" id="see-stratigraphy" onclick="$('.stratigraphy-container').toggle()" style="background-color: var(--custom-black); color: var(--custom-cream);padding:0px">ⓘ see stratigraphy</button>
+        <div class="stratigraphy-container" style="display:none; text-align: center; margin-left:30%;margin-right:50%;">
+            <h5>Stratigraphy</h5>
+            <img src="{% static 'img/stratigraphy_placeholder.png' %}" alt="Map of baldspot boreholes" width="95%" >
+            <p>This is the stratigraphy from borehole ... </p>
+        </div>
+        {% endcomment %}
     </div>
 
     {# the height attribute of the canvas defines how tall the graph displays on the page #}
