--- a/geothermalsite/static/css/tempprofile.css
+++ b/geothermalsite/static/css/tempprofile.css
@@ -1,3 +1,8 @@
 canvas #ctx {
     height: 100vh;
 }
+
+#see-stratigraphy{
+    background-color: var(--custom-black);
+    color: var(--custom-cream);
+}
