cleaning up some styling and wording

--- a/geothermalsite/dashboard/templates/dashboard/boreholemap.html
+++ b/geothermalsite/dashboard/templates/dashboard/boreholemap.html
@@ -6,7 +6,7 @@
     <div class="borehole-map-content">
         <h3>Borehole Map</h3>
         <img src="{% static 'img/boreholes.png' %}" alt="Map of baldspot boreholes" width="85%" >
-        <p>Each B1, B2, ... , B5 represents a single borehole on the baldspot. </p>
+        <p>Each B1, B2, ... , B5 represents a single borehole sample in the baldspot. </p>
     </div>
 
     <script type="text/javascript">
