update meet the team cards with our info

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -40,36 +40,45 @@
           <div class="row extra-bottom-margin">
             <div class="col-md-4">
               <div class="card">
-                <img src="{% static 'img/schema.png' %}" alt="Alia" style="width:100%">
+                <img class="custom-image" src="{% static 'img/AliaBabinet.jpg' %}" alt="Alia">
                 <div class="container">
                   <h2>Alia Babinet</h2>
-                  <p class="title">CEO &amp; Founder</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="btn">Contact</button></p>
+                  <p>Carleton College ('23)</p>
+                  <div class="container">
+                    <a href="https://github.com/ababinet"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/alia-babinet-37001219a/"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:babineta@carleton.edu"><i class="fas fa-envelope"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4">
               <div class="card">
-                <img src="{% static 'img/schema.png' %}" alt="Wenlai" style="width:100%">
+                <img class="custom-image" src="{% static 'img/WenlaiHan.jpg' %}" alt="Wenlai">
                 <div class="container">
                   <h2>Wenlai Han</h2>
-                  <p class="title">Art Director</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="btn">Contact</button></p>
+                  <p>Carleton College ('23)</p>
+                  <div class="container">
+                    <a href="https://github.com/wenlaihan"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/wenlai-han/"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:hanw@carleton.edu"><i class="fas fa-envelope"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4">
               <div class="card">
-                <img src="{% static 'img/schema.png' %}" alt="Emily" style="width:100%">
+                <img class="custom-image" src="{% static 'img/EmilyLitton.jpg' %}" alt="Emily">
                 <div class="container">
                   <h2>Emily Litton</h2>
-                  <p class="title">Designer</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="btn">Contact</button></p>
+                  <p>Carleton College ('23)</p>
+                  <div class="container">
+                    <a href="https://github.com/littone39"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/emilylitton/"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:littone@carleton.edu"><i class="fas fa-envelope"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -78,42 +87,53 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card">
-                <img src="{% static 'img/schema.png' %}" alt="Viktor" style="width:100%">
+                <img class="custom-image" src="{% static 'img/ViktorChekhovoi.jpg' %}" alt="Viktor">
                 <div class="container">
                   <h2>Viktor Chekhovoi</h2>
-                  <p class="title">Designer</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="btn">Contact</button></p>
+                  <p>Carleton College ('23)</p>
+                  <div class="container">
+                    <a href="https://github.com/viktorChekhovoi"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/viktor-chekhovoi-272971191/"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:chekhovoiv@carleton.edu"><i class="fas fa-envelope"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4">
               <div class="card">
-                <img src="{% static 'img/schema.png' %}" alt="Kelly" style="width:100%">
+                <img class="custom-image" src="{% static 'img/KellyMcGucken.jpg' %}" alt="Kelly">
                 <div class="container">
                   <h2>Kelly McGucken</h2>
-                  <p class="title">Designer</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="btn">Contact</button></p>
+                  <p>Carleton College ('23)</p>
+                  <div class="container">
+                    <a href="https://github.com/kmcg55"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/kellymcgucken/"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:mcguckenk@carleton.edu"><i class="fas fa-envelope"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4">
               <div class="card">
-                <img src="{% static 'img/schema.png' %}" alt="Henrie" style="width:100%">
+                <img class="custom-image" src="{% static 'img/HenrieFriesen.jpg' %}" alt="Henrie">
                 <div class="container">
                   <h2>Henrie Friesen</h2>
-                  <p class="title">Designer</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p><button class="btn">Contact</button></p>
+                  <p>Carleton College ('23)</p>
+                  <div class="container">
+                    <a href="https://github.com/friesenh"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/henriefriesen/"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:henriepf@gmail.com"><i class="fas fa-envelope"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         {# end meet the team section #}
+
+        <br/>
 
         <h4 id="list-about-project">About the Project</h4>
         <p>
