--- a/geothermalsite/dashboard/static/css/about.css
+++ b/geothermalsite/dashboard/static/css/about.css
@@ -31,7 +31,7 @@
 }
 
 /* Some left and right padding inside the container */
-.container {
+.card > .container {
     padding: 1rem;
 }
 
@@ -70,4 +70,22 @@
     background-color: var(--primary-background-color);
     outline-style: solid;
     outline-color: var(--primary-text-color);
+    text-align: center;
+}
+
+.custom-image {
+    height: 25%;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-top: 5%;
+    margin-bottom: 0%;
+}
+
+.fab, .fas {
+    font-size: 26px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
