changing the styling of the textbox and related buttons on the custom query page to 100% width of the query container

--- a/geothermalsite/dashboard/static/css/customquery.css
+++ b/geothermalsite/dashboard/static/css/customquery.css
@@ -1,8 +1,8 @@
 @import "generalSiteStyles.css";
 
-.alert {
+/* .alert {
     max-width: 80ch !important;
-}
+} */
 
 #custom-query-container {
     padding-left: 5%;
