Cleaning up hyperlinks

--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -170,7 +170,7 @@
                   >
                   <br /> <br />
                   For a more in-depth overview of the data pipeline, visit the
-                  <u><a class="link" href="{% url 'about' %}">about page</a></u>.
+                  <a class="link" href="{% url 'about' %}"><u>about page</u></a>.
                 </div>
               </div>
             </div>
@@ -186,7 +186,7 @@
           period of time that produced either a lack of data or unreliable data
           has been deemed an outage, and the measurements from that interval of
           time will not be displayed. See below for a full table of known
-          outages as of January 2023.
+          outages.
           <br/>
           <br/>
           <table class="table table-sm">
@@ -225,9 +225,9 @@
         <h4 id="advanced-api-section">Advanced API Use</h4>
         <p>
           The Geothermal Data API supports making more advanced queries,
-          including direct PostGreSQL queries. To query the database directly, visit the <u><a class="link" href="{% url 'customquery' %}">custom query page</a></u>.
+          including direct PostGreSQL queries. To query the database directly, visit the <a class="link" href="{% url 'customquery' %}"><u>custom query page</u></a>.
           To view our API, visit
-          <u><a class="link" href="https://github.com/acdalal/geothermal" target="_blank"> our repository on GitHub</a></u>.
+          <a class="link" href="https://github.com/acdalal/geothermal" target="_blank"><u>our repository on GitHub</u></a>.
         </p>
       </div>
       <!-- end scrollspy -->
