--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -9,8 +9,8 @@
     <h2 class="display-5">Disclaimers</h2>
     <p>Carleton's geothermal database is large and complex! Here are a few things to know:</p>
     <ul>
-        <li>This database contains many outages, so certain searches may have unexpected contours. <u><a class="link" href="{% url 'documentation' %}">Find out more about data outages.</a></u></li>
+        <li>This database contains many outages, so certain searches may have unexpected contours. <a class="link" href="{% url 'documentation' %}"><u>Find out more about data outages.</u></a></li>
         <li>This database is big, so searching for data over long periods of time may take a few seconds and up to a few minutes. Please be patient!</li>
-        <li>This is an ongoing project and there are many features we hope are implemented in the future! <u><a class="link" href="{% url 'about' %}">Read more about future directions.</a></u></li>
+        <li>This is an ongoing project and there are many features we hope are implemented in the future! <a class="link" href="{% url 'about' %}"><u>Read more about future directions.</u></a></li>
     </ul>
 </div>
