--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -138,21 +138,21 @@
         <h4 id="list-about-project">About the Project</h4>
         <p>
             Our task was to build an interface that interacts with and displays the geothermal data for the broader Carleton community.
-            We were advised by Prof. <u><a class="link" href="https://cs.carleton.edu/faculty/adalal/" target="_blank">Amy Csizmar Dalal</a></u>.
-            To learn more about the background of the project, visit the <u><a class="link" href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php" target="_blank">Carleton computer science comps page</a></u>.
+            We were advised by Prof. <a class="link" href="https://cs.carleton.edu/faculty/adalal/" target="_blank"><u>Amy Csizmar Dalal</u></a>.
+            To learn more about the background of the project, visit the <a class="link" href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php" target="_blank"><u>Carleton computer science comps page</u></a>.
 
             <br/></br>
 
             We are very hopeful that GeoDE can provide value to members of the Carleton community well
             into the future! We know that there are lots of exciting ways that this site can be expanded upon, and we
             encourage those who are interested to read more about
-            <u><a class="link" href="https://github.com/acdalal/geothermal/issues">
-              future directions and improvements for GeoDE
-            </a></u> on our repository.
+            <a class="link" href="https://github.com/acdalal/geothermal/issues" target="_blank">
+              <u>future directions and improvements for GeoDE</u>
+            </a> on our repository.
           </p>
         <h4 id="list-about-geothermal">About the Geothermal Wells</h4>
         <p>
-            Carleton's Geothermal Well system is part of <u><a class="link" href="https://www.carleton.edu/geothermal/" target="_blank">Carleton's utility master plan</a></u>, which includes a goal of being carbon-free in 2050.
+            Carleton's Geothermal Well system is part of <a class="link" href="https://www.carleton.edu/geothermal/" target="_blank"><u>Carleton's utility master plan</u></a>, which includes a goal of being carbon-free in 2050.
             The data on this website pertains to the geothermal well system that was spearheaded by the Carleton Aquifer Research Lab (CARL). The Geothermal system at Carleton consists of three interconnected borefields.
             These are located on the Bald Spot, the Mini-Bald Spot, and Bell Field. The Bald Spot is the largest system
             and it has 134 vertical boreholes that each run about 525 feet deep. The Mini-Bald Spot has 77
@@ -167,11 +167,9 @@
 
             The overview of the data pipeline for the geothermal system is as follows: the 5 fiber optic cables embedded in the Bald Spot boreholes converge at a switchbox in a utility tunnel north of the Chapel, which is connected to a Silixa XT-DTS unit in a network closet in the Chapel basement.
             The XT-DTS is a ruggedized distributed temperature sensor unit, and collects data from the boreholes by sending laser pulses down the fiber optic loops.
-            It sends the data files it generates to a private PC via ethernet network, and these data files are uploaded to a Linux Virtual Machine that captures the relevant data and stores the database. Every 30 minutes, a script is invoked to upload new measurements to the database.
-            For more information about the data pipeline or database, please <u><a class="link" href="mailto:bduffy@carleton.edu">contact Bruce Duffy</a></u>.
-
-            The most recent outage from September 2022-January 2023 resulted from a hardware failure of the XT-DTS unit.
-            For several months, there was no DTS unit taking measurements. Now that the previous unit has been replaced, data collection has resumed.
+            It sends the data files it generates to a private PC via ethernet network, and these data files are uploaded to a Linux Virtual Machine that captures the relevant data and stores the database.
+            See the following image for a summary of the data pipeline. *INSERT DATA FLOWCHART*
+            For more information about the data pipeline or database, please <a class="link" href="mailto:bduffy@carleton.edu"><u>contact Bruce Duffy</u></a>.
         </p>
       </div>
     </div>
