--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -15,7 +15,7 @@ Advanced API: Custom Query
     <form method="post" id="custom-query-form">
         {% csrf_token %}
         <p>If you're looking to be able to access the database with a bit more freedom than the available predefined queries,
-            that option is provided here. You will need to know some SQL to get started. <u><a class="link" href="https://www.sqltutorial.org/" target="_blank">Here's a good resource</a></u> if you've never
+            that option is provided here. You will need to know some SQL to get started. <a class="link" href="https://www.sqltutorial.org/" target="_blank"><u>Here's a good resource</u></a> if you've never
             used SQL before.</p>
 
         <details>
