--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -58,7 +58,7 @@
                                 <li>Each line represents either a single day or week, depending on the range of time you've specified.</li>
                                 <li>
                                     Querying time periods with outages may generate visualizations with unexpected contours.
-                                    Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
+                                    Check the <a class="link" href="{% url 'documentation' %}"><u>Documentation page</u></a>to see if you've queried an outage.
                                 </li>
                                 <li>Queries that span large time ranges will take longer to run. Please be patient!</li>
                             </ul>
@@ -96,7 +96,7 @@
                                 <li>Depths in the database do not have clean integer values, so your specified depth may snap to the nearest recorded depth.</li>
                                 <li>
                                     Querying time periods with outages may generate visualizations with unexpected contours.
-                                    Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
+                                    Check the <a class="link" href="{% url 'documentation' %}"><u>Documentation page</u></a> to see if you've queried an outage.
                                 </li>
                                 <li>Queries that span large time ranges will take longer to run. Please be patient!</li>
                             </ul>
@@ -134,7 +134,7 @@
                                 <li>Each line represents either a single day or week, depending on the range of time you've specified.</li>
                                 <li>
                                     Querying time periods with outages may generate visualizations with unexpected contours.
-                                    Check the <u><a class="link" href="{% url 'documentation' %}">Documentation page</a></u> to see if you've queried an outage.
+                                    Check the <a class="link" href="{% url 'documentation' %}"><u>Documentation page</u></a> to see if you've queried an outage.
                                 </li>
                                 <li>Queries that span large time ranges will take longer to run. Please be patient!</li>
                             </ul>
