--- a/geothermalsite/static/css/customquery.css
+++ b/geothermalsite/static/css/customquery.css
@@ -1,8 +1,8 @@
 @import "generalSiteStyles.css";
 
-.alert {
+/* .alert {
     max-width: 80ch !important;
-}
+} */
 
 #custom-query-container {
     padding-left: 5%;
