--- a/geothermalsite/dashboard/static/css/about.css
+++ b/geothermalsite/dashboard/static/css/about.css
@@ -14,6 +14,13 @@
     margin-right: 12% !important;
 }
 
+/* Styling the data pipeline image */
+img {
+    max-height: 100%;
+    max-width: 100%;
+    display: block;
+}
+
 /* Three columns side by side */
 .column {
     float: left;
