Renamed some img files

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -40,7 +40,7 @@
           <div class="row extra-bottom-margin">
             <div class="col-md-4">
               <div class="card">
-                <img class="custom-image" src="{% static 'img/AliaBabinet.jpg' %}" alt="Alia">
+                <img class="custom-image" src="{% static 'img/portraits/AliaBabinet.jpg' %}" alt="Alia">
                 <div class="container">
                   <h2>Alia Babinet</h2>
                   <p>Carleton College ('23)</p>
@@ -55,7 +55,7 @@
 
             <div class="col-md-4">
               <div class="card">
-                <img class="custom-image" src="{% static 'img/WenlaiHan.jpg' %}" alt="Wenlai">
+                <img class="custom-image" src="{% static 'img/portraits/WenlaiHan.jpg' %}" alt="Wenlai">
                 <div class="container">
                   <h2>Wenlai Han</h2>
                   <p>Carleton College ('23)</p>
@@ -70,7 +70,7 @@
 
             <div class="col-md-4">
               <div class="card">
-                <img class="custom-image" src="{% static 'img/EmilyLitton.jpg' %}" alt="Emily">
+                <img class="custom-image" src="{% static 'img/portraits/EmilyLitton.jpg' %}" alt="Emily">
                 <div class="container">
                   <h2>Emily Litton</h2>
                   <p>Carleton College ('23)</p>
@@ -87,7 +87,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card">
-                <img class="custom-image" src="{% static 'img/ViktorChekhovoi.jpg' %}" alt="Viktor">
+                <img class="custom-image" src="{% static 'img/portraits/ViktorChekhovoi.jpg' %}" alt="Viktor">
                 <div class="container">
                   <h2>Viktor Chekhovoi</h2>
                   <p>Carleton College ('23)</p>
@@ -102,7 +102,7 @@
 
             <div class="col-md-4">
               <div class="card">
-                <img class="custom-image" src="{% static 'img/KellyMcGucken.jpg' %}" alt="Kelly">
+                <img class="custom-image" src="{% static 'img/portraits/KellyMcGucken.jpg' %}" alt="Kelly">
                 <div class="container">
                   <h2>Kelly McGucken</h2>
                   <p>Carleton College ('23)</p>
@@ -117,7 +117,7 @@
 
             <div class="col-md-4">
               <div class="card">
-                <img class="custom-image" src="{% static 'img/HenrieFriesen.jpg' %}" alt="Henrie">
+                <img class="custom-image" src="{% static 'img/portraits/HenrieFriesen.jpg' %}" alt="Henrie">
                 <div class="container">
                   <h2>Henrie Friesen</h2>
                   <p>Carleton College ('23)</p>
