--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -24,7 +24,7 @@
 
       <div class="ml-auto">
         <a href="https://www.carleton.edu/" target="_blank">
-          <img class="logo" src="{% static 'img/Carleton_Simplified C-Ray_White.png' %}" alt="Carleton College Blue Logo" width="45" height="45">
+          <img class="logo" src="{% static 'img/logos/carleton_white_logo.png' %}" alt="Carleton College Blue Logo" width="45" height="45">
         </a>
       </div>
     </div>
