--- a/geothermalsite/static/css/about.css
+++ b/geothermalsite/static/css/about.css
@@ -14,6 +14,13 @@
     margin-right: 12% !important;
 }
 
+/* Styling the data pipeline image */
+img {
+    max-height: 100%;
+    max-width: 100%;
+    display: block;
+}
+
 /* Three columns side by side */
 .column {
     float: left;
@@ -31,7 +38,7 @@
 }
 
 /* Some left and right padding inside the container */
-.container {
+.card > .container {
     padding: 1rem;
 }
 
@@ -70,6 +77,7 @@
     background-color: var(--primary-background-color);
     outline-style: solid;
     outline-color: var(--primary-text-color);
+    text-align: center;
 }
 
 .custom-image {
@@ -81,4 +89,10 @@
     width: 50%;
     margin-top: 5%;
     margin-bottom: 0%;
+}
+
+.fab, .fas {
+    font-size: 26px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
