--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -6,6 +6,7 @@
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <script src="{% static 'js/utils/modeSwitch.js' %}"></script>
 
 
     <script>
