--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -24,9 +24,11 @@
 
       <div class="ml-auto">
         <a href="https://www.carleton.edu/" target="_blank">
-          <img class="logo" src="{% static 'img/logos/carleton_white_logo.png' %}" alt="Carleton College Blue Logo" width="45" height="45">
+          <img id="logo" class="logo" src="{% static 'img/logos/carleton_white_logo.png' %}" alt="Carleton College Blue Logo" width="45" height="45">
         </a>
       </div>
+
     </div>
+
   </div>
 </nav>
