--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -184,8 +184,8 @@
         {% include 'dashboard/tempvstime.html' %}
     {% endif %}
 
-    {% if type == "tempvsdepth" %}
+    <!-- {% if type == "tempvsdepth" %}
         {% include 'dashboard/tempvsdepth.html' %}
-    {% endif %}
+    {% endif %} -->
 
 {% endblock %}
