--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -25,5 +25,6 @@
 
     {# the height attribute of the canvas defines how tall the graph displays on the page #}
     <canvas id="ctx"></canvas>
+    <button class="btn btn-outline-secondary" id="reset" onclick="window.chart.resetZoom();">Reset Zoom</button>
     </div>
 </div>
