--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -14,6 +14,7 @@
             <button class="btn btn-secondary submit-button"id="downloadImage" onclick="window.downloadGraphImage('temp_vs_time')">Download graph</button>
         </div>
         <canvas id="ctx"></canvas>
+        <button class="btn btn-outline-secondary" id="reset" onclick="window.chart.resetZoom();">Reset Zoom</button>
 
     </div>
 </div>
