--- a/geothermalsite/static/css/generalSiteStyles.css
+++ b/geothermalsite/static/css/generalSiteStyles.css
@@ -57,7 +57,7 @@ will change those respective attributes for the entire site.
 
 /* HTML tag styles --------------------------------------------------------- */
 body {
-    font-size: 16px;
+    font-size: 18px;
     font-family: "Montserrat";
     color: var(--primary-text-color);
     background-color: var(--primary-background-color);
@@ -96,10 +96,12 @@ label {
 .btn {
     color: white;
     background-color: var(--primary-button-color);
+    outline-color: var(--primary-button-color);
 }
 
 .btn:hover {
     background-color: var(--secondary-button-color);
+    outline-color: var(--primary-button-color);
 }
 
 /* Jumbotron --------------------------------------------------------------- */
