--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -36,7 +36,7 @@
         </li> -->
     </ul>
     <script src="{% static 'js/utils/selectTab.js' %}"></script>
-    <script src="{% static 'js/utils/formCache.js' %}"></script>
+    <script src="{% static 'js/utils/cache.js' %}"></script>
 
     {# Content inside the given tab #}
     <div class="tab-content" id="myTabContent">
@@ -77,7 +77,14 @@
                             The date range you selected includes at least one outage, which might result in incorrect data being displayed.
                         </div>
                         <input class="btn btn-secondary form-control submit-button" type="submit" value="Submit" name="temperature-profile"/>
+
+                        {% if not graphData %}
+                        <div class="alert alert-danger">
+                            The parameters you requested didn't match any available data. Please adjust your inputs.
+                        </div>
+                        {% endif %}
                     </form>
+
                 </div>
             </div>
         </div>
@@ -118,7 +125,14 @@
                             The date range you selected includes at least one outage, which might result in incorrect data being displayed.
                         </div>
                         <input class="btn btn-secondary form-control submit-button" type="submit" value="Submit" name="temperature-time"/>
+
+                        {% if not graphData %}
+                        <div class="alert alert-danger">
+                            The parameters you requested didn't match any available data. Please adjust your inputs.
+                        </div>
+                        {% endif %}
                     </form>
+
                 </div>
             </div>
         </div>
@@ -172,20 +186,25 @@
     <link rel="stylesheet" href="{% static 'css/customdaterangepicker.css' %}">
     <script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
 
-    {% if type %}
+
+    {% if type and graphData %}
         <script>$("#{{ type }}-button").click()</script>
+
+
+        {% if type == "tempprofile"%}
+            {% include 'dashboard/tempprofile.html' %}
+        {% endif %}
+
+        {% if type == "tempvstime" %}
+            {% include 'dashboard/tempvstime.html' %}
+        {% endif %}
+
+        <!-- {% if type == "tempvsdepth" %}
+            {% include 'dashboard/tempvsdepth.html' %}
+        {% endif %} -->
+
     {% endif %}
 
-    {% if type == "tempprofile" %}
-        {% include 'dashboard/tempprofile.html' %}
-    {% endif %}
 
-    {% if type == "tempvstime" %}
-        {% include 'dashboard/tempvstime.html' %}
-    {% endif %}
-
-    <!-- {% if type == "tempvsdepth" %}
-        {% include 'dashboard/tempvsdepth.html' %}
-    {% endif %} -->
 
 {% endblock %}
